// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Button Label
      </label>
    </section>
  </button>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={[Function]}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Click Me!
      </label>
    </section>
  </button>
</div>
`;

exports[` 3`] = `
<button
  className="Button__StyledButton-sc-1v7sls2-0 XXdV"
  disabled={false}
  htmlFor={null}
  id={null}
  name={null}
  onClick={null}
  tabIndex="1"
  type="button"
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
    id={null}
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
      fontSize="1em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Standard Button
    </label>
  </section>
</button>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 JteBi"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Standard
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 gRPSVp"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Disabled
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 mWjML"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Solid
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 eOQOAL"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Disabled
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 hAUqxb"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Round
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 gOwbun"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Disabled
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kKRQJF"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Solid Round
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 cnDPsJ"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Disabled
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 cnsEiS"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Underlined
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 kWmdPO"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Disabled
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 jeARnt"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Plain
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 dHevGx"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Disabled
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 jeARnt"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="bookmark"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Bookmark
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 dHevGx"
    disabled={true}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="-1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="bookmark"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Disabled
      </label>
    </section>
  </button>
</section>
`;

exports[` 5`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kiIKlP"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Button
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="reset"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Reset
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="submit"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Submit
      </label>
    </section>
  </button>
</section>
`;

exports[` 6`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 dGwfwW"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Standard
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Info
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 gwLXsZ"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Success
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 khOmQd"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Warning
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 cEcvDN"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Alert
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 mWjML"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Standard
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 mWjML"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Solid Info
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 bNBxRI"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Solid Success
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 krVCDd"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Solid Warning
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 iIqNON"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 bsnBxt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Solid Alert
      </label>
    </section>
  </button>
</section>
`;

exports[` 7`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 kiIKlP"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Profile
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="angle-down"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Expand
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="bookmark"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Bookmark
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-plus fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="plus"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Add
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-print fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="print"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 264c-13.25 0-24 10.74-24 24 0 13.25 10.75 24 24 24s24-10.75 24-24c0-13.26-10.75-24-24-24zm32-88V99.88c0-12.73-5.06-24.94-14.06-33.94l-51.88-51.88c-9-9-21.21-14.06-33.94-14.06H110.48C93.64 0 80 14.33 80 32v144c-44.18 0-80 35.82-80 80v128c0 8.84 7.16 16 16 16h64v96c0 8.84 7.16 16 16 16h320c8.84 0 16-7.16 16-16v-96h64c8.84 0 16-7.16 16-16V256c0-44.18-35.82-80-80-80zM128 48h192v48c0 8.84 7.16 16 16 16h48v64H128V48zm256 416H128v-64h256v64zm80-112H48v-96c0-17.64 14.36-32 32-32h352c17.64 0 32 14.36 32 32v96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Print
      </label>
    </section>
  </button>
</section>
`;

exports[` 8`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cIUnXF"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dVSAOv Button__LabelWrapper-sc-1v7sls2-1 crITLr"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Profile
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dVSAOv Button__LabelWrapper-sc-1v7sls2-1 crITLr"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="angle-down"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Expand
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dVSAOv Button__LabelWrapper-sc-1v7sls2-1 crITLr"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="bookmark"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Bookmark
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dVSAOv Button__LabelWrapper-sc-1v7sls2-1 crITLr"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-plus fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="plus"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Add
      </label>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dVSAOv Button__LabelWrapper-sc-1v7sls2-1 crITLr"
      id={null}
      rows="max-content 1fr"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-print fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="print"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 264c-13.25 0-24 10.74-24 24 0 13.25 10.75 24 24 24s24-10.75 24-24c0-13.26-10.75-24-24-24zm32-88V99.88c0-12.73-5.06-24.94-14.06-33.94l-51.88-51.88c-9-9-21.21-14.06-33.94-14.06H110.48C93.64 0 80 14.33 80 32v144c-44.18 0-80 35.82-80 80v128c0 8.84 7.16 16 16 16h64v96c0 8.84 7.16 16 16 16h320c8.84 0 16-7.16 16-16v-96h64c8.84 0 16-7.16 16-16V256c0-44.18-35.82-80-80-80zM128 48h192v48c0 8.84 7.16 16 16 16h48v64H128V48zm256 416H128v-64h256v64zm80-112H48v-96c0-17.64 14.36-32 32-32h352c17.64 0 32 14.36 32 32v96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Print
      </label>
    </section>
  </button>
</section>
`;

exports[` 9`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 cIUnXF"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-angle-down fa-w-10 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="angle-down"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 320 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M151.5 347.8L3.5 201c-4.7-4.7-4.7-12.3 0-17l19.8-19.8c4.7-4.7 12.3-4.7 17 0L160 282.7l119.7-118.5c4.7-4.7 12.3-4.7 17 0l19.8 19.8c4.7 4.7 4.7 12.3 0 17l-148 146.8c-4.7 4.7-12.3 4.7-17 0z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-bookmark fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="bookmark"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-plus fa-w-12 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="plus"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M368 224H224V80c0-8.84-7.16-16-16-16h-32c-8.84 0-16 7.16-16 16v144H16c-8.84 0-16 7.16-16 16v32c0 8.84 7.16 16 16 16h144v144c0 8.84 7.16 16 16 16h32c8.84 0 16-7.16 16-16V288h144c8.84 0 16-7.16 16-16v-32c0-8.84-7.16-16-16-16z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dAiHAN Button__LabelWrapper-sc-1v7sls2-1 jeRPpb"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-print fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="print"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 264c-13.25 0-24 10.74-24 24 0 13.25 10.75 24 24 24s24-10.75 24-24c0-13.26-10.75-24-24-24zm32-88V99.88c0-12.73-5.06-24.94-14.06-33.94l-51.88-51.88c-9-9-21.21-14.06-33.94-14.06H110.48C93.64 0 80 14.33 80 32v144c-44.18 0-80 35.82-80 80v128c0 8.84 7.16 16 16 16h64v96c0 8.84 7.16 16 16 16h320c8.84 0 16-7.16 16-16v-96h64c8.84 0 16-7.16 16-16V256c0-44.18-35.82-80-80-80zM128 48h192v48c0 8.84 7.16 16 16 16h48v64H128V48zm256 416H128v-64h256v64zm80-112H48v-96c0-17.64 14.36-32 32-32h352c17.64 0 32 14.36 32 32v96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </section>
  </button>
</section>
`;

exports[` 10`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 JteBi"
  id={null}
  rows={null}
>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 dMRkeV Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Count Button
      </label>
      <div
        className="Tag__TagContainer-sc-128kb3h-0 fNAoUS"
        id={null}
        label="2"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
          fontSize="0.65em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.6px"
        >
          2
        </label>
      </div>
    </section>
  </button>
  <button
    className="Button__StyledButton-sc-1v7sls2-0 XXdV"
    disabled={false}
    htmlFor={null}
    id={null}
    name={null}
    onClick={null}
    tabIndex="1"
    type="button"
  >
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 gtkuZt Button__LabelWrapper-sc-1v7sls2-1 ddNwBa"
      id={null}
      rows={null}
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-user fa-w-14 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
        color={null}
        data-icon="user"
        data-prefix="far"
        focusable="false"
        fontSize="inherit"
        id={null}
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M313.6 304c-28.7 0-42.5 16-89.6 16-47.1 0-60.8-16-89.6-16C60.2 304 0 364.2 0 438.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-25.6c0-74.2-60.2-134.4-134.4-134.4zM400 464H48v-25.6c0-47.6 38.8-86.4 86.4-86.4 14.6 0 38.3 16 89.6 16 51.7 0 74.9-16 89.6-16 47.6 0 86.4 38.8 86.4 86.4V464zM224 288c79.5 0 144-64.5 144-144S303.5 0 224 0 80 64.5 80 144s64.5 144 144 144zm0-240c52.9 0 96 43.1 96 96s-43.1 96-96 96-96-43.1-96-96 43.1-96 96-96z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
      <label
        className="Typography__StyledLabel-sc-19auepv-0 fYsNIK"
        fontSize="1em"
        fontWeight={600}
        htmlFor={null}
        letterSpacing="0px"
      >
        Count Button
      </label>
      <div
        className="Tag__TagContainer-sc-128kb3h-0 fNAoUS"
        id={null}
        label="2"
      >
        <label
          className="Typography__StyledLabel-sc-19auepv-0 gZBTly"
          fontSize="0.65em"
          fontWeight={600}
          htmlFor={null}
          letterSpacing="0.6px"
        >
          2
        </label>
      </div>
    </section>
  </button>
</section>
`;
